# lightyear

./: README.md
.github/workflows/: main.yaml
examples/common/: Cargo.toml
examples/common/src/: app.rs  settings.rs
examples/test/: Cargo.toml
examples/test/assets/: settings.ron
examples/test/src/: client.rs  protocol.rs  server.rs  shared.rs
lightyear/: Cargo.toml
lightyear/src/: lib.rs
lightyear/src/channel/senders/: fragment_sender.rs
lightyear/src/client/: mod.rs  plugin.rs
lightyear/src/client/io/: config.rs  transport.rs
lightyear/src/connection/: client.rs
lightyear/src/server/io/: config.rs  transport.rs
lightyear/src/transport/: error.rs  mod.rs  udp.rs
lightyear/src/transport/middleware/compression/: zstd.rs
