[package]
name = "simple"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
publish = false

[features]
metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
lightyear_examples_common = { path = "../common" }
lightyear = { path = "../../lightyear", features = [
  "big_messages", "lz4","zstd"
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
bevy = { version = "0.14", features = [
  "multi_threaded",
  "bevy_state",
  "serialize",
] }
rand = "0.8"
metrics-exporter-prometheus = { version = "0.15.1", optional = true }
